Bug mostly fixed. Bottom margin of ad is maintained, but at smallest player size, the title is partially covered by the ad, and ad doesn't align to the top and bottom.

--- a/app/assets/styles/lightbox-ads/minireel.css
+++ b/app/assets/styles/lightbox-ads/minireel.css
@@ -420,8 +420,8 @@
                     background:50% 50% / cover no-repeat;
                 }
         .mr-card__copy {
-            width:18.25rem;/*292px*/ overflow: auto; height:50%;
-            position: absolute; top:0; right:-19rem;
+            width:18.25rem;/*292px*/ overflow: scroll; overflow-x: hidden;
+            position: absolute; top:0; bottom: 345px; right:-19rem;
             background:#fff;
         }
             .mr-card__title {
@@ -761,7 +761,7 @@
     }
     .mr-ad__med-rect {
         width:300px; height:250px;
-        position:absolute; bottom:-4.375rem; right:-19rem;
+        position:absolute; bottom:-4.39rem; right:-19rem;
         background:#ccc;
     }
         .mr-ad__group .mr-ad__med-rect {
